--- a/css/doctor/style.css
+++ b/css/doctor/style.css
@@ -32,6 +32,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 0 10px;
 }
 
+
 .logo {
     font-family: 'Inter';
     font-style: normal;
@@ -55,20 +56,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     flex-wrap: wrap;
 }
 
-.menu-item {
-    box-sizing: border-box;
-    width: 117px;
-    height: 42px;
-    margin-right: 17px;
-    border: 1px solid #232323;
-    border-radius: 22px;
-    list-style-type: none;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .menu-item_active {
     box-sizing: border-box;
     width: 117px;
@@ -87,6 +74,24 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .root-item_active {
     text-decoration-line: none;
     color: white;
+}
+
+.items {
+    margin-bottom: 30px;
+}
+
+.menu-item {
+    box-sizing: border-box;
+    width: 117px;
+    height: 42px;
+    margin-right: 17px;
+    border: 1px solid #232323;
+    border-radius: 22px;
+    list-style-type: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .top-menu__wrap {
@@ -154,154 +159,238 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-right: 15px;
 }
 
-.items {
-    margin-bottom: 60px;
-}
 
-.clinic-card {
+
+
+.doctor-card {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
 }
 
-.clinic-info-left {
+.doctor-info-left {
     text-align: center;
+    margin-right: 30px;
 }
 
-.clinic-phone img {
-    max-width: 100px;
+.doctor-info-center {
+    margin-right: 30px;
 }
 
-.clinic-doctors {
-    margin-top: 11px;
-    font-size: 19px;
-    line-height: 20px;
-    color: rgba(0, 0, 0, 0.5);
+.photo-doctor img {
+    width: 150px;
+    margin-bottom: 15px;
 }
 
-.clinic-doctors img {
-    max-width: 18px;
-    margin-right: 5px;
-}
-
-.clinic-reviews img {
+.doctor-reviews img {
     max-width: 20px;
-}
-
-.reviews-count {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.7);
 }
 
 .percent-review {
     font-style: normal;
-
+    text-decoration-line: none;
     line-height: 20px;
     color: rgba(0, 0, 0, 0.7);
     margin-top: 5px;
 }
 
-.clinic-info {
+.doctor-name {
+    font-style: normal;
+    font-weight: 500;
     font-size: 30px;
-    line-height: 37px;
-}
-
-.clinic-info-center {
-}
-
-.photo-clinic img {
-    max-width: 60%;
-}
-
-.clinic-name {
-    font-size: 30px;
-}
-
-.clinic-type {
-    font-size: 18px;
-}
-
-.clinic-address {
-    font-family: 'Inter';
-}
-
-.clinic-text-block {
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-
-.clinic-schedule {
-    font-size: 16px;
-    line-height: 20px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-
-.clinic-metro {
-    font-size: 16px;
-    line-height: 20px;
-    color: rgba(0, 0, 0, 0.7);
-
-}
-
-.clinic-metro-near {
-    margin-bottom: 11px;
-}
-
-.clinic-metro-further {
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(0, 0, 0, 0.5);
-    margin-bottom: 23px;
-}
-
-.clinic-phone {
-    margin-bottom: 42px;
-    font-size: 16px;
-    line-height: 20px;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.btn_records {
-    background: #FFF04B;
-    border-radius: 4px;
-    width: 241px;
-    height: 50px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.btn_records a {
-    font-family: 'Rubik';
-    font-size: 18px;
-    line-height: 21px;
-    text-decoration-line: none;
     color: #000000;
 }
 
-.clinic-service-items {
-    width: 100%;
-    margin-left: 100px;
+.doctor-category {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.doctor-spec {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+.doctor-experience {
+    color: #FF6472;
+}
+
+.doctor-clinics_active {
+    width: 552px;
+    height: 174px;
+    background: rgba(255, 240, 75, 0.15);
+    border-radius: 4px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.doctor_clinic-name span {
+    font-size: 20px;
+}
+
+
+.doctor_clinic-items {
+    padding: 10px;
+}
+
+.doctor_clinic-name {
+    font-style: normal;
+    font-weight: 400;
+}
+
+.clinic-schedule {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.clinic-metro-further {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.doctor-clinics {
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 552px;
+    height: 53px;
+    padding: 10px;
     display: flex;
+    justify-content: space-between;
+}
+
+.doctor-clinics span {
+    font-size: 20px;
+}
+
+.doctor-date {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 352px;
+    height: 58px;
+}
+
+.doctor-date span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.clinic-active {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 352px;
+    height: 58px;
+}
+
+.clinic-active span {
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.clinic-free-time-container {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+}
+
+.free-time {
+    width: 101px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFF04B;
+    border-radius: 4px;
+    margin: 10px;
+}
+
+
+
+.clinic-phone {
+    text-align: center;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.doctor-registration {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.pagination_listing {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+.pagination_item {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #BCBCBC;
+}
+
+.pagination_link {
+    text-decoration-line: none;
+    color: #BCBCBC;
+}
+
+.pagination_link-back {
+    border: 1px solid #BCBCBC;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #BCBCBC;
+    text-decoration-line: none;
+}
+
+.pagination_link-active {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #185BC3;
+    text-decoration-line: none;
 }
 
 .clinic-service-text {
     text-align: center;
 }
 
-.review-clinic-text {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 37px;
-    text-align: center;
-    color: #232323;
-}
 
+.clinic-service-items {
+    width: 100%;
+    margin-left: 100px;
+    display: flex;
+}
 
 .service-name {
     text-decoration-line: underline;
@@ -312,6 +401,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .first, .second, .third {
     width: 33.3%;
 }
+
 
 .under-services-phone {
     font-style: normal;
@@ -337,146 +427,61 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.3);
 }
 
-.popular-doctor-img {
-    margin-bottom: 30px;
+
+
+.last-review-clinic {
+    background: #F7EDDF;
+    height: 500px;
 }
 
-.popular-doctor-img img {
-    max-width: 55%;
-}
-
-.swiper-main__slide {
+.review__clinics {
     display: flex;
 }
 
-.doctor-name {
-    margin-bottom: 10px;
+.last-review-clinic_wrap {
+    height: 767px;
+    max-width: 1145px;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 
-.doctor-category {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    color: rgba(0, 0, 0, 0.3);
-    margin-bottom: 10px;
-}
-
-.doctor-spec {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    margin-bottom: 18px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-
-.doctor-address {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(0, 0, 0, 0.7);
-    margin-bottom: 13px;
-}
-
-.doctor-phone {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    color: rgba(0, 0, 0, 0.7);
-    margin-bottom: 20px;
-}
-
-.doctor-card {
-}
-
-.rating-body {
-    box-sizing: border-box;
-    width: 76px;
-    height: 31px;
+.last-review-clinic__card-clinic {
+    width: 379px;
+    height: 204px;
+    background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
-    border-radius: 22px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
+    border-radius: 4px;
+    margin-right: 15px;
 }
 
-.rating-body img {
-    max-width: 18px;
+.last-review-clinic__card-clinic__photo img {
+    width: 81px;
 }
 
-.doctor-rating {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+
+.last-review-clinic-count img {
+    width: 20px;
 }
 
-.popular-doctor__body {
-    display: flex;
+.last-review-clinic-count {
+    height: 25px;
 }
 
-.popular-doctor {
-    padding: 17px 30px;
-    width: 100%;
-}
-
-.popular-doctor-container {
-    border: 1px solid #BCBCBC;
-    margin-right: 30px;
-}
-
-.reviews-count {
+.author-review {
     font-size: 12px;
-    line-height: 15px;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.7);
 }
 
-.info-docspec {
-    text-align: center;
-    margin: 40px;
-}
-
-.popup-questions {
-    text-align: center;
-    margin: 40px;
-}
-
-.breadcrumbs-item {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    text-decoration-line: underline;
+.comment-head {
+    font-weight: 500;
+    font-size: 12px;
     color: rgba(0, 0, 0, 0.8);
 }
 
-.breadcrumbs {
-    margin-bottom: 30px;
+.comment {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.7);
 }
-
-
-
-
-
-.scrollup {
-    width: 40px;
-    height: 40px;
-    opacity: 0.3;
-    position: fixed;
-    bottom: 30px;
-    right: 15px;
-    display: none;
-    text-indent: -9999px;
-    z-index: 30;
-    background: url("../../img/scroll.png") no-repeat;
-}
-
-
 
 
 .review-clinic-address {
@@ -508,34 +513,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.5);
 }
 
-.last-review-clinic {
-    background: #F7EDDF;
-}
-
-.review__clinics {
-    display: flex;
-}
-
-.last-review-clinic_wrap {
-    height: 767px;
-    max-width: 1145px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
-
-.last-review-clinic__card-clinic {
-    width: 379px;
-    height: 204px;
-    background: #FFFFFF;
-    border: 0.5px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    margin-right: 15px;
-}
-
-.last-review-clinic__card-clinic__photo img {
-    width: 81px;
-}
-
 .clinic-card-main {
     display: flex;
     justify-content: space-between;
@@ -554,62 +531,72 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.7);
 }
 
-.last-review-clinic-count img {
+.info-docspec {
+    text-align: center;
+    margin: 40px;
+}
+
+
+.attention-for-patient {
+    margin: 40px 0;
+    width: 1156px;
+    height: 79px;
+    border: 1px solid #FF6472;
+    border-radius: 4px;
+}
+
+.attention-container {
+    width: 1041px;
+    padding: 10px 70px;
+}
+
+.alert-for-view {
+    color: #FF6472;
+}
+
+.alert-for-view img {
     width: 20px;
+    color: red;
 }
 
-.last-review-clinic-count {
-    height: 25px;
-}
-
-.author-review {
-    font-size: 12px;
+.alert-info {
     color: rgba(0, 0, 0, 0.7);
 }
 
-.comment-head {
-    font-weight: 500;
-    font-size: 12px;
+.breadcrumbs-item {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-decoration-line: underline;
     color: rgba(0, 0, 0, 0.8);
 }
 
-.comment {
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.7);
+.breadcrumbs {
+    margin-bottom: 30px;
 }
 
 
 
 
+.btn_records {
+    background: #FFF04B;
+    border-radius: 4px;
+    width: 241px;
+    height: 50px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.btn_records a {
+    font-family: 'Rubik';
+    font-size: 18px;
+    line-height: 21px;
+    text-decoration-line: none;
+    color: #000000;
+}
 
 
 
