--- a/css/clinic/mob-style.css
+++ b/css/clinic/mob-style.css
@@ -348,7 +348,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     margin-bottom: 9px;
 }
 
-.abcde {
+.counts-reviews {
     text-decoration-line: underline;
     color: rgba(0, 0, 0, 0.7);
 }
