--- a/css/doctor/mob-style.css
+++ b/css/doctor/mob-style.css
@@ -359,7 +359,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-size: 30px;
 }
 
-.abcde {
+.counts-reviews {
     text-decoration-line: underline;
     color: rgba(0, 0, 0, 0.7);
 }
